--- a/package.json
+++ b/package.json
@@ -1,38 +1,28 @@
 {
     "name": "kisan-sewa",
     "version": "0.0.0",
-    "engines": {
-        "node": "6.11.1",
-        "npm": "6.13.4"
-    },
     "scripts": {
         "ng": "ng",
-        "start": "node server.js",
+        "start": "ng serve",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e",
-        "heroku-postbuild": "ng build --prod"
+        "e2e": "ng e2e"
     },
     "private": true,
     "dependencies": {
         "@angular/animations": "^9.0.7",
         "@angular/cdk": "^9.1.3",
-        "@angular/cli": "~9.0.5",
         "@angular/common": "~9.0.5",
         "@angular/compiler": "~9.0.5",
-        "@angular/compiler-cli": "~9.0.5",
         "@angular/core": "~9.0.5",
         "@angular/forms": "~9.0.5",
         "@angular/material": "^9.1.3",
         "@angular/platform-browser": "~9.0.5",
         "@angular/platform-browser-dynamic": "~9.0.5",
         "@angular/router": "~9.0.5",
-        "express": "^4.17.1",
-        "path": "^0.12.7",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
-        "typescript": "~3.7.5",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
@@ -40,11 +30,10 @@
         "@angular/cli": "~9.0.5",
         "@angular/compiler-cli": "~9.0.5",
         "@angular/language-service": "~9.0.5",
+        "@types/node": "^12.11.1",
         "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.3",
-        "@types/node": "^12.11.1",
         "codelyzer": "^5.1.2",
-        "enhanced-resolve": "^3.3.0",
         "jasmine-core": "~3.5.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~4.3.0",
